syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
option java_multiple_files = true;
option java_package = "userserver";

package userserver; // package do proto

service UserServer {
    rpc submitLocationReport (LocationReport) returns (LocationResponse);
    rpc obtainLocationReport (GetLocation) returns (LocationStatus);
}

message LocationReport {
    string message = 1;
}

message LocationResponse {
    string message = 1;
}

message GetLocation {
    string message = 1;
}

message LocationStatus {
    string message = 1;
}


